--- a/pokemon-app/src/styles/Search.scss
+++ b/pokemon-app/src/styles/Search.scss
@@ -61,6 +61,7 @@ p {
     width: 134px;
     height: 30px;
     font-size: 15px;
+    margin-bottom: 10px;
   }
 }
 /* PC size */
